--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
-# 1. Add the name of the workflow.
+# =============================
+# Workflow: CI for Training, Evaluation and Deployment
+# =============================
 name: CI for Training, Evaluation and Deployment
 
-# 2. Trigger on push, PR, or manual run.
+# Trigger on push, PR, or manual run
 on:
   push:
     branches:
@@ -16,34 +18,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 4. Checkout the repository
+      # 1️⃣ Checkout repository
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
 
-      # Setup Python environment (essential for training)
-      - name: 🛠️ Setup Python 3.x
+      # 2️⃣ Install build tools (make)
+      - name: 🔧 Install build tools
+        run: sudo apt-get update && sudo apt-get install -y make build-essential
+
+      # 3️⃣ Setup Python 3.11
+      - name: 🛠️ Setup Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.11'
           cache: 'pip'
 
-      # 5. Install dependencies
-      - name: 💾 Install Dependencies (using make)
+      # 4️⃣ Upgrade pip, setuptools, wheel
+      - name: ⚡ Upgrade pip, setuptools, wheel
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+
+      # 5️⃣ Install dependencies using Makefile
+      - name: 💾 Install Dependencies (Makefile)
         run: make install
 
-      # 6. Train the model
-      - name: 🏃 Train Model (using make)
+      # 6️⃣ Train the model
+      - name: 🏃 Train Model
         run: make train
 
-      # 7. Evaluate the model
-      - name: 📊 Evaluate Model (using make)
+      # 7️⃣ Evaluate the model
+      - name: 📊 Evaluate Model
         run: make eval
 
-      # Optional: Display metrics in the log
+      # 8️⃣ Display metrics in the log (optional)
       - name: 📝 Display Metrics
         run: cat result/metrics.txt || echo "Metrics file not found."
 
-      # 8. Hugging Face Deployment
+      # 9️⃣ Hugging Face Deployment
       - name: 🚀 Deploy to Hugging Face Space
         env:
           HF: ${{ secrets.HF_TOKEN }}
