--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,5 @@
 scikit-learn>=1.2.2
-joblib>=1.1.1
-numpy>=1.24.0
-pandas>=1.4.2
+pandas==1.4.2
+numpy==1.22.3
 gradio==3.50.2
-cml>=0.9.0
+joblib>=1.1.1
